# llama-index-migration-tools

./: Untitled.ipynb  packages_to_bump_deduped.txt  pypackages.txt  pyproject.toml  runner.sh
llama_index_migration_tools/: llamaindex_registry.txt  main.py  main_hub.py  main_update_pyproject.py  update_pyproject_toml.py  version_registry.json
llama_index_migration_tools/command_line/: src.py
llama_index_migration_tools/lib/: update_pyproject_toml.py
llama_index_migration_tools/notebooks/: automate_migration.ipynb  nbs.csv  packs.ipynb  registry.ipynb  the_big_dedup.ipynb  tools.ipynb  update_pyproject_toml.ipynb
llama_index_migration_tools/notebooks/.ipynb_checkpoints/: llamaindex_packages-checkpoint.csv  tools-checkpoint.ipynb
llama_index_migration_tools/templates/: __init__.py  init.py  pyproject.py  readme.py
notebooks/: analyze_all_pyproject_tomls.ipynb  libraryjson-llamahub-authors.ipynb  llamaindex_packages.csv  notebooks_list.ipynb  packages_to_bump.txt  packs.ipynb  pyproject-fix-python-req-exlude-BUILD.ipynb  registry.ipynb
notebooks/.ipynb_checkpoints/: migrate-libraryjson-pt1-checkpoint.ipynb  nbs-checkpoint.csv  packs-checkpoint.ipynb  the_big_dedup-checkpoint.ipynb  version_registry-checkpoint.json
