[tool.poetry]
name = "llama-index-migration-tools"
version = "0.1.0"
description = "Tool for automating annoying parts of migration efforts"
authors = ["Andrei <andrei@nerdai.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
toml = "^0.10.2"

[tool.poetry.scripts]
llamaindex-migration = 'llama_index_migration_tools.command_line.src:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
